--- a/index.html
+++ b/index.html
@@ -26,18 +26,43 @@
     <style></style>
   </head>
   <body>
-    <div class="container">
-      Get insights that help your business grow. Discover the benefits of data
-      analytics and make better decisions regarding revenue, customer
-      experience, and overall efficiency. 10k+ companies 314 templates 12m+
-      queries
-    </div>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    <main>
+      <div class="card">
+        <div class="card-image overlay">
+          <div class="desktop-image">
+            <img
+              src="images/image-header-desktop.jpg"
+              alt="Empoyees working on laptop in office"
+            />
+          </div>
+          <div class="mobile-image">
+            <img
+              src="images/image-header-desktop.jpg"
+              alt="Empoyees working on laptop in office"
+            />
+          </div>
+        </div>
+        <div class="card-content">
+          <h2>Get insights that help your business grow.</h2>
+          <p>
+            Discover the benefits of data analytics and make better decisions
+            regarding revenue, customer experience, and overall efficiency.
+          </p>
+          <ul>
+            <li><span>10k+</span> companies</li>
+            <li><span>314</span> templates</li>
+            <li><span>12m+</span> queries</li>
+          </ul>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </div>
+    </footer>
   </body>
 </html>
